# Magnitude

./: .dockerignore  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  TIER3_IMPLEMENTATION_PLAN.md  agent.md  agents.md  config.yaml  context.md  docker-compose.yml  go.mod  go.sum  skills.md
.github/workflows/: go.yml
bench/: bench_test.go  integration_test.go
cmd/server/: main.go
examples/: search_results.md
internal/api/: context.go  handlers.go  handlers_fuzz_test.go  handlers_v2.go  middleware.go  types.go
internal/cache/: segment_cache.go  segment_cache_test.go
internal/cluster/: consistency.go  consistency_test.go  coordinator.go  coordinator_test.go  hash.go  hash_test.go  rendezvous.go  rendezvous_test.go  replica_client.go
internal/collection/: collection.go  collection_test.go  fork.go
internal/config/: config.go
internal/distance/: batch_pure.go  dispatch.go  distance.go  distance_test.go  simd.c  simd_amd64.go  simd_stub.go
internal/errors/: errors.go
internal/events/: flow.go  flow_test.go
internal/failure/: detector.go  detector_test.go
internal/gc/: gc.go  gc_test.go
internal/gossip/: disseminator.go  gossip.go  gossip_test.go  security.go  server.go
internal/index/: index.go  recall.go
internal/index/flat/: flat.go  flat_test.go  heap.go
internal/index/hnsw/: hnsw.go  hnsw_recall_test.go  hnsw_test.go  snapshot.go
internal/index/ivf/: ivf.go  ivf_test.go  kmeans.go
internal/index/spann/: posting_store.go  spann.go  spann_test.go
internal/index/sparse/: inverted.go  inverted_test.go
internal/metadata/: filter.go  filter_test.go  multi_tenancy_test.go  sqlite.go  tenant.go  tenant_test.go
internal/migration/: migration.go  migration_test.go  trigger.go
internal/observability/: metrics.go  metrics_test.go
internal/quantize/: pipeline.go  product.go  product_test.go  scalar.go  scalar_test.go
internal/routing/: forwarder.go  forwarder_test.go  replica.go  router.go  router_test.go
internal/scheduler/: scheduler.go  scheduler_test.go
internal/search/: rrf.go  rrf_test.go
internal/security/: audit.go  audit_test.go  auth.go  ratelimit.go
internal/storage/: admission.go  admission_test.go  bloom.go  bloom_test.go  compact_action.go  compact_action_test.go  compaction.go  format.go  format_fuzz_test.go  mmap_unix.go  s3wal.go  s3wal_test.go  wal.go  wal_recovery_test.go  wal_test.go
pkg/client/: client.go  cluster_client.go  cluster_client_test.go
python-client/: .gitignore  README.md  embedder.py  ingest.py  pyproject.toml  requirements.txt  search.py  vectordb_client.py
python-client/src/magnitude/: __init__.py  client.py  embedder.py  exceptions.py
python-client/src/magnitude/cli/: __init__.py  ingest.py  search.py  ui.py
python-client/src/magnitude/static/: app.js  index.html  style.css
