[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "magnitude-client"
version = "0.1.0"
description = "Python client for the Magnitude vector database"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Magnitude Team" },
]
keywords = ["vector-database", "embeddings", "siglip", "semantic-search", "similarity-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
embed = [
    "torch>=2.0.0",
    "transformers>=4.41.0",
    "Pillow>=10.2.0",
    "sentencepiece>=0.2.0",
    "protobuf>=3.20.0",
    "numpy>=1.20.0",
]
cli = [
    "rich>=13.7.0",
    "tqdm>=4.66.2",
]
ui = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]
all = [
    "magnitude-client[embed,cli,ui]",
]

[project.urls]
Homepage = "https://github.com/POTATO-VE1/Magnitude"
Repository = "https://github.com/POTATO-VE1/Magnitude"
Issues = "https://github.com/POTATO-VE1/Magnitude/issues"

[project.scripts]
magnitude-ingest = "magnitude.cli.ingest:main"
magnitude-search = "magnitude.cli.search:main"
magnitude-ui = "magnitude.cli.ui:main"

[tool.hatch.build.targets.wheel]
packages = ["src/magnitude"]
